# liveemote

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/demo_server/: main.py  routes.py  websocket_api.py
apps/demo_server/static/: demo.css  demo.js  index.html
character_input/canonical/: profile.yaml
deploy/k8s/: demo.yaml
scripts/: check_push_ready.py  create_sample_character.py  setup_deeplivecam_models.py
tests/: conftest.py  test_affect_runtime.py  test_agent_bridge.py  test_character_ingest.py  test_deeplivecam_adapter.py  test_deeplivecam_model_setup.py  test_demo_app.py  test_meeting_join.py  test_protocol_voice.py
