[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-live-avatar"
version = "0.1.0"
description = "Local live character avatar demo with affect runtime, voice bridge, and LiveTalking adapter."
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "pydantic>=2.6", "pyyaml>=6.0", "httpx>=0.26", "websockets>=12.0", "numpy>=1.24", "soundfile>=0.12"]

[project.optional-dependencies]
perception = ["opencv-python>=4.9", "mediapipe>=0.10", "webrtcvad>=2.0.10", "sounddevice>=0.4"]
voice = ["elevenlabs>=1.0"]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["packages", "."]
include = ["hermes_avatar*", "apps*"]

[tool.pytest.ini_options]
pythonpath = ["packages", "."]
testpaths = ["tests"]
